feat: add gemini-3-flash-preview model support
- Add gemini-3-flash-preview to gemini, gemini-sub, and openrouter providers
- Add google.gemini-3-pro-preview to openrouter provider
- Update gemini-3-pro-preview features for all providers
- Rename 'reasoning' to 'thinking' in features
- Add new features: thinking_levels, audio_input, image_output
- Remove deprecated features: multimodal, context_caching, image_generation
- Standardize max_tokens to 20000 across all Gemini 3 models

--- a/providers/gemini-sub/models/gemini-3-flash-preview.yaml
+++ b/providers/gemini-sub/models/gemini-3-flash-preview.yaml
@@ -1,11 +1,11 @@
-name: gemini-3-pro-preview
+name: gemini-3-flash-preview
 
 apis:
   chat_completion:
     api_format: gemini
     context:
-      max_input: 1048576
-      max_output: 65535
+      max_input: 1000000
+      max_output: 64000
     features:
       tool_use: true
       thinking: true
