--- a/providers/gemini/models/gemini-3-pro-preview.yaml
+++ b/providers/gemini/models/gemini-3-pro-preview.yaml
@@ -9,8 +9,11 @@ apis:
       max_output: 65535
     features:
       tool_use: true
-      reasoning: true
+      thinking: true
+      thinking_levels: true
       structured_output: true
+      audio_input: true
+      image_output: false
     parameters:
       temperature: 1.0
       max_tokens: 20000
