feat(openai-sub): add GPT-5 series models with agents and reasoning levels
- Add gpt-5.2 and gpt-5.2-codex models
- Add agents configuration for all GPT-5 models based on agent-hub
- Add reasoning_levels support (array format with lowercase values)
- Add default reasoning_level parameter (medium)
- Update all models to match Codex code configuration

Model-Agent mappings:
- gpt-5.2 -> GPT-5.2
- gpt-5.2-codex -> GPT-5.2 Codex
- gpt-5.1 -> GPT-5.1
- gpt-5.1-codex-max -> GPT-5.1 Codex Max
- gpt-5.1-codex -> GPT-5 Codex
- gpt-5.1-codex-mini -> GPT-5 Codex
- gpt-5-codex -> GPT-5 Codex
- gpt-5-codex-mini -> GPT-5 Codex
- gpt-5 -> GPT-5.1

Reasoning levels by model:
- gpt-5.2, gpt-5.2-codex, gpt-5.1-codex-max: [low, medium, high, xhigh]
- gpt-5.1, gpt-5.1-codex, gpt-5-codex: [low, medium, high]
- gpt-5.1-codex-mini, gpt-5-codex-mini: [medium, high]
- gpt-5: [minimal, low, medium, high]

--- a/providers/openai-sub/models/gpt-5.2.yaml
+++ b/providers/openai-sub/models/gpt-5.2.yaml
@@ -1,8 +1,7 @@
-name: gpt-5-codex
-is_deprecated: true
+name: gpt-5.2
 
 agents:
-  - GPT-5 Codex
+  - GPT-5.2
 
 apis:
   chat_completion:
@@ -17,6 +16,7 @@ apis:
         - low
         - medium
         - high
+        - xhigh
       structured_output: true
     parameters:
       temperature: 1.0
