--- a/providers/openai-sub/models/gpt-5-codex-mini.yaml
+++ b/providers/openai-sub/models/gpt-5-codex-mini.yaml
@@ -1,6 +1,9 @@
 name: gpt-5-codex-mini
 is_deprecated: true
 
+agents:
+  - GPT-5 Codex
+
 apis:
   chat_completion:
     api_format: codex
@@ -10,7 +13,11 @@ apis:
     features:
       tool_use: true
       reasoning: true
+      reasoning_levels:
+        - medium
+        - high
       structured_output: true
     parameters:
       temperature: 1.0
       max_tokens: 20000
+      reasoning_level: medium
