--- a/providers/openai-sub/models/gpt-5.1-codex.yaml
+++ b/providers/openai-sub/models/gpt-5.1-codex.yaml
@@ -1,5 +1,8 @@
 name: gpt-5.1-codex
 
+agents:
+  - GPT-5 Codex
+
 apis:
   chat_completion:
     api_format: codex
@@ -9,7 +12,12 @@ apis:
     features:
       tool_use: true
       reasoning: true
+      reasoning_levels:
+        - low
+        - medium
+        - high
       structured_output: true
     parameters:
       temperature: 1.0
       max_tokens: 20000
+      reasoning_level: medium
