feat: add claude-sonnet-4-6, MiniMax-M2.5, kimi-k2.5, glm-5 and fix anthropic-sub consistency
New models:
- anthropic/anthropic-sub: claude-sonnet-4-6
- minimax/minimax-cn: MiniMax-M2.5, MiniMax-M2.5-highspeed, MiniMax-M2.1-highspeed
- moonshot/moonshot-cn: kimi-k2.5
- zai/zai-cn: glm-5

Fix:
- anthropic-sub/claude-opus-4-6: match anthropic params (structured_output: true, temperature: 1.0)

--- a/providers/moonshot-cn/models/kimi-k2.5.yaml
+++ b/providers/moonshot-cn/models/kimi-k2.5.yaml
@@ -1,11 +1,12 @@
-name: claude-opus-4-6
+name: kimi-k2.5
 
 apis:
   chat_completion:
-    api_format: anthropic
+    api_format: openai
+    endpoint: /chat/completions
     context:
-      max_input: 200000
-      max_output: 64000
+      max_input: 262144
+      max_output: 262144
     features:
       tool_use: true
       reasoning: true
