--- a/providers/minimax-cn/models/minimax-m2.5-highspeed.yaml
+++ b/providers/minimax-cn/models/minimax-m2.5-highspeed.yaml
@@ -1,11 +1,12 @@
-name: claude-opus-4-6
+name: MiniMax-M2.5-highspeed
 
 apis:
   chat_completion:
-    api_format: anthropic
+    api_format: openai
+    endpoint: /chat/completions
     context:
-      max_input: 200000
-      max_output: 64000
+      max_input: 204800
+      max_output: 131072
     features:
       tool_use: true
       reasoning: true
