--- a/providers/zai-cn/models/glm-5.yaml
+++ b/providers/zai-cn/models/glm-5.yaml
@@ -1,15 +1,16 @@
-name: claude-opus-4-6
+name: glm-5
 
 apis:
   chat_completion:
-    api_format: anthropic
+    api_format: openai
+    endpoint: /chat/completions
     context:
       max_input: 200000
-      max_output: 64000
+      max_output: 128000
     features:
       tool_use: true
       reasoning: true
       structured_output: true
     parameters:
-      temperature: 1.0
+      temperature: 0.7
       max_tokens: 20000
