--- a/providers/zai-sub-cn/provider.yaml
+++ b/providers/zai-sub-cn/provider.yaml
@@ -1,5 +1,6 @@
 name: zai-sub-cn
-type: subscription
-auth_type: oauth2
+type: api
+auth_type: api_key
+api_key: ZAI_API_KEY
 base_url: https://open.bigmodel.cn/api/coding/paas/v4
 description: "Zhipu AI (GLM) coding API via subscription (China)"
